--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@firestitch/package",
-  "title": "package.json -> Rename Title to Component Title",
-  "description": "@firestitch/package",
-  "version": "0.1.0",
+  "name": "@firestitch/tab",
+  "title": "Tab",
+  "description": "@firestitch/tab",
+  "version": "7.0.3",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Firestitch/ngx-package"
+    "url": "https://github.com/Firestitch/ngx-tab"
   },
   "author": {
     "name": "Firestitch",
@@ -16,7 +16,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Firestitch/ngx-package/issues"
+    "url": "https://github.com/Firestitch/ngx-tab/issues"
   },
   "main": "package/index.js",
   "typings": "package/index.d.ts",
